<resources>
    <string name="app_name">Shipping Calculator</string>
    <string name="button_calculate_cost">CALCULATE COST</string>
    <string name="label_cost">Cost: </string>
    <string name="label_insurance">Insurance</string>
    <string name="label_next_day">Next day</string>
    <string name="label_second_day">Second day</string>
    <string name="label_standard">Standard</string>
    <string name="text_shipping_weight">Shipping Weight (lbs): </string>
    <string name="hint_shipping_weight">Enter Shipping Weight</string>
</resources>